# ChangeLog for app-i18n/zinnia
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/zinnia/ChangeLog,v 1.9 2014/01/05 14:01:35 naota Exp $

*zinnia-0.06-r3 (05 Jan 2014)

  05 Jan 2014; Naohiro Aota <naota@gentoo.org> +zinnia-0.06-r3.ebuild:
  Drop *.a files; Rewrite using autotools-utils.eclass #483248

*zinnia-0.06-r2 (10 Sep 2013)

  10 Sep 2013; Ian Delaney <idella4@gentoo.org> +zinnia-0.06-r2.ebuild,
  -zinnia-0.05.ebuild:
  revbump -> EAPI 5

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> zinnia-0.06-r1.ebuild:
  Stable for x86, wrt bug #480822

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> zinnia-0.06-r1.ebuild:
  Stable for amd64, wrt bug #480822

  01 Jun 2012; Zac Medico <zmedico@gentoo.org> zinnia-0.06-r1.ebuild:
  inherit eutils for epatch

  07 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org> zinnia-0.06-r1.ebuild:
  Remove .la files.

*zinnia-0.06-r1 (07 Apr 2011)

  07 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org> -zinnia-0.06.ebuild,
  +zinnia-0.06-r1.ebuild, +files/zinnia-0.06-perl.patch,
  +files/zinnia-0.06-ricedown.patch:
  Revision bump: there are not tests (close bug #348577); fix building with
  USE=perl if zinnia was not installed before (bug #356039); rice the build
  down to respect flags and not use -O3 instead.

*zinnia-0.06 (04 Nov 2010)

  04 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> +zinnia-0.06.ebuild:
  Version bumped, bug #331563. Added perl USE flag.

*zinnia-0.05 (04 May 2010)

  04 May 2010; MATSUU Takuto <matsuu@gentoo.org> +zinnia-0.05.ebuild,
  +metadata.xml:
  Initial import.