@@ -1,8 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX zinnia-0.06-perl.patch 482 SHA256 f5647adde6591faf8d1319cdcaeaa188253be711833c69d76e3f0b53b47fb054 SHA512 3f982b5c9f5945d5a2315308135a8a59ae7bd0815835572776452b8f1e6b92c5e1363c28945edcf3f025b2d09fc39e7d094da03a560ea55dd4ebd1a59acf34d1 WHIRLPOOL a32ae2ff5fc7905e08a379aa971251f17fe618c929fd51643a6439eaf261c0df1c839233a503274e8d8e4e5cd7198b0ca6a327b80d48d19f5fc1dcae1363ec5f
 AUX zinnia-0.06-ricedown.patch 520 SHA256 484335ef662208b3f08ee5e25e65783c15c5bdaf9665c473e33df889bc9c0cff SHA512 8d039027e2411eac78e1dc235fbcb1ee51e094d627077cb3599d63b49c5df38382257601a0cc3f139721a51adad73edc8cca15c38360ebd3623a52a013049faf WHIRLPOOL c9140c8c91b2d28c94fce80a91b3a8e6171c7a96b12d98cc4473f5bc998138011ed3010b207d9073d0722159e07b8f3830655be68affd55ef77bfb0f6b7fb083
 DIST zinnia-0.06.tar.gz 457415 SHA256 ece3af93f937282971634fd81d3e997f848e8cfa958220e26a4564ca064ac20b SHA512 b9a44dc3664302269c4d8481225964a3188c1921f5af7f136fdccdc452917f6ff934884e266436a0f1e0a32af19d3bea5f5e4416e694a653983039a513277b53 WHIRLPOOL 3d0822a5dfaa46ad5dab144888e10f2a0d473e12dcb0f3754e8d55d93cfed19b5ded44c9ca2f2b16451450e05c8b6e5819bf5789d546eb0955f91b37179fe413
 EBUILD zinnia-0.06-r1.ebuild 1529 SHA256 742134b930fb7e8023abddca590d914d37a2258efee4421945857abefbeb9575 SHA512 1a99a801465c3f15ff15ae94062db223b0d7c04b75bd7111c477bb7a5d4cef7688d2837a16508af79331caa1fc6db7c02939b9b64c65bf87ae1ecd4f9740bf28 WHIRLPOOL 296da7746aeb65bd377816a93ee6a104dd8c6b0faacd85a3ed0763ed5b66651a7dae51d2cefc9b5d0c08ef36c3a74ee2926322e5e5a0b96a9df48a6b7fd3b79c
 EBUILD zinnia-0.06-r2.ebuild 1576 SHA256 1995af49756d6cfb44be128e7b0b12ff6a0bf48dd8c9bcfc8445d9c8a3f03a30 SHA512 7b8dabd7cdefdae21122370ebb3c06b6af71cb00160860f3758475a9ad48274472cc2cf89dfde19b49fd1f1a072acdbccb4910cf3ea8c1e56067a2584495ac96 WHIRLPOOL e7c3f9de49581a3d35447eacc6c4dfd11d3ed3f67a7e9ac81c4c1cddfbaf35299a80232410a6163b7a62b47e6819aa855869512c49b0f8d37771b3a2d955ecea
-EBUILD zinnia-0.06-r3.ebuild 1636 SHA256 c2448fc1a6f5763c37d8ad984553dd0eecfbea5556aa19939df828f3ecefdbf2 SHA512 ffb68349dabe79b794ca0cc088c902626fbd03d992212708fce5b6e6f743949ce3bb4744101e2a4a4bd7a106f8dddeb252fb66b46a2fdb291a5c6a49f38d27f9 WHIRLPOOL c30f0aae93b79f2e8a8b5296d161fa21ee046f7085bc0aed4c2370eef3b17a7d3c8a8d6e71a7feb4480a72c38dd84dbfa2d9bc1c35688e32adcdaf6fb5c60be5
-MISC ChangeLog 1618 SHA256 c148d9fe47f0903235355d2bd1832f115bffb8a85326da212ec475d205cf3ed1 SHA512 338343c8a38165ebd09457109a2bbe2ba15c12f40c11d0fcab675f3d91229469095db031817416477ecf7794ad3a3b205301def7596b6170bb9285c9a5d75919 WHIRLPOOL 67ec30ca5581a3579c43d52901490970489abc2bbde380d16050a2e39eba67ef1ef72bf4420b787a4b0d09bfcad2539633686e115516af999dedda96da2a1daa
+EBUILD zinnia-0.06-r3.ebuild 1638 SHA256 34c525c68e2747d77d911de0520b8ee79fad8ba9ddeb6a391455f36318be19b7 SHA512 6f34cbf278ea804245023e52062c9dddd4f025b2d4d73c68676c535c15ffdd8603945f59c296ea5e7732ae98db05d93111dc9f48bb812c9669df97baff5c518f WHIRLPOOL 9b9a2bc57bac88f19cec8f006b15d89969363ca5cdde99ce29685d49a90c0378ba16335737ebc63005ce82f81855ffa10964064780043caed385a53dc4f77aff
+MISC ChangeLog 1728 SHA256 463c248e4178bde33e0e20ae226309aa46d3bc1cb84e4bad6c6a972c8ecff3e7 SHA512 c1b7e3e5de07e3386ec9bfbf0888e63ab0ea7d1570513587ca59c2a099ec0973f8e2a2ed873cf79b3dae29098c1cc378c54797fcdb59615d513f9ed2998d7d9e WHIRLPOOL 7f0073498bd8e09fd9665a89abe0d2581bb53c90b0a9b97fdf7d12d5a3ac018625cfed21476804bd1d05f06c2895ceb46e8065d9248ce4f4fc1b02c474973ccb
 MISC metadata.xml 157 SHA256 92a8379a3f1d8c9e52e17dbaf224721ad5bd6ba9fba4302e909aa2b099b33f89 SHA512 bdbd7d926319ccc9ef6d3419c7b20af690c09e4f7523f1ba4a349172436d1a916dad123a58e0faad249f24b9813251b264b950bdabae68136be6a0a96082d784 WHIRLPOOL 32fa9ae24bdd6c9bd52e94e09f149cac3be4816ff28868272ff501c28bb911c8af52a97b4b325bbc863044c81922cdd21ac8caa19cb700fbb9b5858166ad9204
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQIcBAEBCAAGBQJS0OvTAAoJEDYO1FT4VRUUj2MQAJkwXmPTY/lrheG1RFDFxiRo
+byyTqzwSh7Yjr0IodwmoYIFfn0rtfMFOozTm6is73jGAawKGfPNZ/xPA2em7s0L5
+cN5SYzuxSuj3ApWdFdDYlWZZLaFPO2CRlvWuaiQAB7STGy4ley0eke4zE5qvW6Pw
+1ve+20UwvzmYCk4AVLY3uQ14p0FLMQWeQ0cbsxMs/6gJ1Q/ccNXn/lLQaoYytTu7
+Gtr79W8yl3KZJnWneU7dqGPvgcsSQjlLULN137o8An8cAhpVybsHjE13Jr0ojjV7
+xAmMbNPbE/I7af9l2WWSCL74N1u1txVwqXbGJjRxMgklWD4fw8MQlCnuSQKOuWMx
+9IxO22SQBMwNf/qMaF2lNGwUDE4ZFNB/1xnrBWhm9q7XA3qyt6/E1z+3fYthUEn3
+a2VG5d2ijOEhKwL3YCmukDcWplbYFWvSFSG2Lgqcev2yJLNQwEEFmxuSEypvNsvs
+U24YuN4EYskEVHPINkdqOu4JmCFoEO3hyWiT0udplOEKR+MEJXDHAzG2wwE9QLgi
+9dHmHQeEAoCzU7qc3Laxs1CK2EY9fpYdLZcIUdBmU2O23dNW2yep22BIP0O1OoaK
+ybyu5CBziJ2bfeVsp0cCY+yho5VoQuM/hNHEsL+e/KxUPlxd2n+cmrqb+LVtU3+1
+VAy8sRMRVYA2VHJSM3lt
+=2eZx
+-----END PGP SIGNATURE-----
