@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/zinnia/zinnia-0.06-r3.ebuild,v 1.1 2014/01/05 14:01:35 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/zinnia/zinnia-0.06-r3.ebuild,v 1.2 2014/01/11 06:59:23 naota Exp $
 
 EAPI=5
 PERL_EXPORT_PHASE_FUNCTIONS=no
@@ -26,7 +26,8 @@ src_prepare() {
 	autotools-utils_src_prepare
 	if use perl ; then
 			pushd "${S}/perl" >/dev/null
-			PATCHES=( ) perl-module_src_prepare
+			PATCHES=()
+			perl-module_src_prepare
 			popd >/dev/null
 	fi
 }
